--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
             <div class="rightsidebtn">
                 <div class="menubtn">
-                    <button class="menubtn_id">Menu</button>
+                    <button class="menubtn_id">Menu <i class="uil uil-angle-double-right"></i></button>
                 </div>
                 <div class="cart" onclick="ac_cart()">
                     <i class="uil uil-shopping-cart-alt"></i>
