rm menu in cart

--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
             Your cart is empty
             <!-- here goes the cart data -->
         </div>
+        <div class="guide">
+            <i class="uil uil-arrow-up"></i>
+            <p>To close click cart btn </p>
+        </div>
         <div class="popupbg">
             <div class="orderpop">
                 <span class="closepopbtn"><i class="uil uil-times"></i></span>
