--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
     </div>
     <!-- cart page -->
     <div class="cartsection">
+        <div class="menutit">
+            <p class="juit">Shopping Cart</p>
+        </div>
         <div class="cart_wraper">
             Your cart is empty
             <!-- here goes the cart data -->
@@ -201,8 +204,7 @@
     <section id="dishes">
         <div class="secdiv">
             <p class="ko">Our Today's Special</p>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur velit soluta rem possimus veritatis
-                veniam doloribus eos totam enim aut.</p>
+            <p>Savor the Extraordinary, Every Day.</p>
         </div>
         <div class="wocon">
             <div class="m1 viewcart">
@@ -213,8 +215,7 @@
     <section id="Chefs">
         <div class="secdiv k8">
             <p>Our Expert Chef's</p>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur velit soluta rem possimus veritatis
-                veniam doloribus eos totam enim aut.</p>
+            <p>Crafting Culinary Excellence, One Plate at a Time.</p>
         </div>
         <div class="cef">
             <div class="cf">
@@ -231,17 +232,13 @@
     <section id="review">
         <div class="secdiv k7">
             <p>What Others Are Saying</p>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur velit soluta rem possimus veritatis
-                veniam doloribus eos totam enim aut.</p>
+            <p>Feast on Flavor, Echoed by Delightful Testimonials.</p>
         </div>
         <div class="review_cont">
             <div class="rev_text">
                 <div class="us_text activetext">
                     <i class="fas fa-quote-left"></i>
-                    <p> can't say enough good things about [Restaurant Name]! The atmosphere is cozy, the staff is
-                        friendly, and the food is simply outstanding. From the moment you walk in, you feel a warm
-                        welcome. My favorite dish is the [Signature Dish]—it's a taste sensation that keeps me coming
-                        back for more. If you haven't tried [Restaurant Name] yet, you're missing out!</p>
+                    <p> I can't say enough good things about FoodLane! The atmosphere is cozy, the staff is friendly, and the food is simply outstanding. From the moment you walk in, you feel a warm welcome. My favorite dish is the FoodLane Delight—it's a taste sensation that keeps me coming back for more. The perfect blend of flavors and the freshness of the ingredients make it a culinary delight.</p>
                     <span>Sarah Thompson<span>
                 </div>
                 <div class="us_text ">
