--- a/pages/index.html
+++ b/pages/index.html
@@ -347,6 +347,7 @@
                 <!-- card goes here -->
             </div>
         </div>
+        <button class="butyu" onclick="menuact()"><i class="uil uil-book-open"></i> vist menu <i class="uil uil-corner-up-right-alt"></i></button>
     </section>
     <section id="Chefs">
         <div class="secdiv k8">
@@ -508,7 +509,7 @@
     <div class="loader_con">
         <img src="./src/food.gif" alt="">
     </div>
-    <footer>
+    <footer id="foot">
         <div class="footer_wraper">
             <div class="mainfooter">
                 <div class="rname">
